# actix-chat-app

./: .gitignore  Cargo.toml  README.md  build.rs  opibuild.sh
.cargo/: config.toml
src/: api.rs  auth.rs  db.rs  groups.rs  main.rs  msgs.rs  server.rs  sessions.rs  ws.rs
src/api/: auth.rs  contacts.rs  msgs.rs  user.rs
src/ws/: server.rs  sessions.rs
web/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
web/src/: App.tsx  declaration.d.ts  index.html  index.tsx
web/src/components/: AuthProvider.tsx  Loading.tsx  User.tsx  UserImage.tsx
web/src/pages/: App.tsx  ChatApp.tsx  Login.tsx  Signup.tsx
web/src/pages/chat/: AddContact.tsx  Chat.tsx  ChatApp.tsx  ChatInfo.tsx  ChatMessage.tsx  ContactsBar.tsx  CreateGroup.tsx  TopBar.tsx  UpdateBio.tsx
web/src/pages/login/: Login.tsx
web/src/pages/signup/: Signup.tsx
